--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url();
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 
 *{
     padding: 0;
@@ -7,6 +7,8 @@
 }
 
 body{
+    font-family:'Outfit', sans-serif;
+    font-weight: 400;
     font-size: 15px;
     background-color: hsl(212, 45%, 89%);
     color: hsl(220, 15%, 55%);
@@ -36,7 +38,7 @@ img{
 }
 
 h2{
-    
+    font-weight:700;
     color: hsl(218, 44%, 22%);
 }
 
