--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ p {
     bottom: 0px;
     left: 50%;
     transform: translate(-50%);
+    text-align: center;
 }
 
 .attribution a { color: hsl(228, 45%, 44%); }
